--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,8 @@ Cargo.lock
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-inputs
+input
+*.txt
 
 # Added by cargo
 
